# stalltagebuch

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  Dioxus.toml  MIGRATION_GUIDE.md  PROPOSALS.md  README.md  REMAINING_WORK.md  build.rs  build_android.sh  generate_android_icons.sh  log.sample  schema.sql
.cargo/: config.toml
.github/: copilot-instructions.md
.github/android-builder/: Dockerfile
.github/prompts/: makei18n.prompt.md
.github/workflows/: build-android.yml  docker-builder.yml
.zed/: settings.json
android/: AndroidManifest.xml  MainActivity.kt  proguard-rules.pro  release.keystore
android/res/mipmap-anydpi-v26/: stalltagebuch_launcher.xml
android/res/values/: stalltagebuch_launcher_background.xml
assets/: main.css
dioxus-gallery-components/: Cargo.toml
dioxus-gallery-components/src/: lib.rs
locales/: de-DE.ftl  en-US.ftl
nextcloud-auth/: Cargo.toml  README.md
nextcloud-auth/src/: component.rs  lib.rs  models.rs  service.rs
photo-gallery/: COMPONENT_API.md  Cargo.toml  PICKER_API.md  README.md
photo-gallery/src/: components.rs  download.rs  lib.rs  models.rs  picker.rs  schema.rs  service.rs  sync.rs  thumbnail.rs  upload.rs
src/: camera.rs  error.rs  i18n.rs  image_processing.rs  main.rs
src/components/: crop_editor.rs  egg_history.rs  egg_tracking.rs  event_add.rs  event_edit.rs  home.rs  mod.rs  navigation.rs  profile_add.rs  profile_detail.rs  profile_edit.rs  profile_i18n.rs  profile_list.rs  profile_photo_card.rs  quest_mode.rs  ring_color_picker.rs  settings.rs  statistics.rs  synced_photo.rs
src/components/settings/: backup_card.rs  devices_card.rs  export_import_cards.rs  network_check_card.rs  nextcloud_card.rs  nextcloud_login_card.rs  spacetime_db_card.rs
src/database/: mod.rs  schema.rs
src/dioxus_spacetime_module_bindings/: backup_type.rs  backups_table.rs  create_backup_started_args_type.rs  create_backup_started_reducer.rs  create_event_args_type.rs  create_event_reducer.rs  create_photo_args_type.rs  create_photo_collection_reducer.rs  create_photo_reducer.rs  create_quail_args_type.rs  create_quail_reducer.rs  delete_device_reducer.rs  delete_egg_record_reducer.rs  delete_event_reducer.rs  delete_photo_collection_reducer.rs  delete_photo_reducer.rs  delete_quail_reducer.rs  devices_table.rs  dioxus.rs  egg_records_table.rs  finish_backup_args_type.rs  finish_backup_reducer.rs  mod.rs  photo_collections_table.rs  photo_type.rs  photos_table.rs  quail_event_type.rs  quail_type.rs  register_device_reducer.rs  set_quail_photo_reducer.rs  update_device_reducer.rs  update_event_args_type.rs  update_event_reducer.rs  update_photo_collection_reducer.rs  update_photo_sync_status_args_type.rs  update_photo_sync_status_reducer.rs  update_photo_version_args_type.rs  update_photo_version_reducer.rs  update_quail_args_type.rs  update_quail_reducer.rs  (+1 more)
src/models/: device.rs  egg_record.rs  export.rs  import_v1.rs  mod.rs  quail.rs  quail_event.rs  spacetime_settings.rs
src/services/: background_sync.rs  backup_service.rs  crdt_service.rs  device_id_service.rs  download_service.rs  event_service.rs  export_import_service.rs  export_service.rs  import_service.rs  import_v1_service.rs  import_v2_service.rs  mod.rs  nextcloud_cleanup_service.rs  nextcloud_webdav.rs  operation_capture.rs  photo_paths.rs  photo_service.rs  photo_service_new.rs  photo_service_spacetime.rs  photo_sync_metadata.rs  spacetime_settings_service.rs  sync_paths.rs  sync_service.rs  upload_service.rs
src/spacetime/: auth.rs  client.rs  context.rs  mod.rs  types.rs
src/spacetime_module_bindings/: create_event_args_type.rs  create_event_reducer.rs  create_photo_args_type.rs  create_photo_collection_args_type.rs  create_photo_collection_reducer.rs  create_photo_reducer.rs  create_quail_args_type.rs  create_quail_reducer.rs  delete_device_reducer.rs  delete_egg_record_reducer.rs  delete_event_reducer.rs  delete_photo_collection_reducer.rs  delete_photo_reducer.rs  delete_quail_reducer.rs  device_type.rs  dioxus.rs  egg_record_type.rs  mod.rs  photo_collection_type.rs  photo_type.rs  quail_event_type.rs  quail_events_table.rs  quail_type.rs  quails_table.rs  register_device_args_type.rs  register_device_reducer.rs  set_quail_photo_reducer.rs  update_device_args_type.rs  update_device_reducer.rs  update_event_reducer.rs  update_photo_collection_args_type.rs  update_photo_collection_reducer.rs  update_photo_sync_status_reducer.rs  update_quail_args_type.rs  update_quail_reducer.rs  upsert_egg_record_args_type.rs  upsert_egg_record_reducer.rs
stalltagebuch-database/: Cargo.toml
stalltagebuch-database/src/: connection.rs  error.rs  lib.rs  schema.rs
stalltagebuch-server/: Cargo.toml
stalltagebuch-server/src/: lib.rs
