[workspace]
members = [
    ".",
    "dioxus-gallery-components",
    "nextcloud-auth",
    "photo-gallery",
    "stalltagebuch-database",
]
resolver = "2"

[package]
name = "stalltagebuch"
version = "0.1.0"
authors = ["Franz Dietrich <dietrich@teilgedanken.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stalltagebuch-database = { path = "stalltagebuch-database" }
dioxus-gallery-components = { path = "dioxus-gallery-components" }
photo-gallery = { path = "photo-gallery", features = ["sync", "components"] }
nextcloud-auth = { path = "nextcloud-auth" }
dioxus = { version = "0.7.1", features = [] }
dioxus-i18n = { git = "https://github.com/Kannen/dioxus-i18n.git", branch = "main" }
unic-langid = { version = "0.9", features = ["macros"] }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
reqwest_dav = { version = "0.2", default-features = false, features = [
    "rustls-tls",
] }
base64 = "0.22"
toml = "0.9"
sha2 = "0.10"
ulid = "1.1"
tokio = { version = "1.0", features = ["rt", "time", "macros"] }
log = "0.4.28"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "webp",
] }
rand = "0.9"
zip = { version = "6", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"
android_logger = "0.15"

[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

# Android build targets
[target.aarch64-linux-android.dev-dependencies]
[target.armv7-linux-androideabi.dev-dependencies]
[target.i686-linux-android.dev-dependencies]
[target.x86_64-linux-android.dev-dependencies]
