[workspace]
members = [
    ".",
    "dioxus-gallery-components",
    "nextcloud-auth",
    "photo-gallery",
    # stalltagebuch-server is intentionally excluded: it compiles to
    # wasm32-unknown-unknown for SpacetimeDB and is built separately via
    # `spacetime publish stalltagebuch-server --project-path stalltagebuch-server`.
]
exclude = ["stalltagebuch-server"]
resolver = "2"

[package]
name = "stalltagebuch"
version = "0.1.0"
authors = ["Franz Dietrich <dietrich@teilgedanken.de>"]
edition = "2024"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-gallery-components = { path = "dioxus-gallery-components" }
photo-gallery = { path = "photo-gallery", features = ["sync", "components"] }
nextcloud-auth = { path = "nextcloud-auth" }
dioxus = { version = "0.7.7", features = [] }
dioxus-i18n = { git = "https://github.com/Kannen/dioxus-i18n.git", branch = "main" }
unic-langid = { version = "0.9", features = ["macros"] }
spacetimedb_sdk = { package = "spacetimedb-sdk", git = "https://github.com/enaut/SpacetimeDB.git", branch = "copilot/create-pr-for-dioxus-changes" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
] }
reqwest_dav = { version = "0.3", default-features = false, features = [
    "rustls-tls",
] }
base64 = "0.22"
ulid = "1.1"
tokio = { version = "1.0", features = ["rt", "time", "macros"] }
log = "0.4.28"
env_logger = "0.11"
hostname = "0.4"
zip = { version = "8", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"
android_logger = "0.15"
rustls-platform-verifier = "0.6.2"


[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "openssl/vendored"]
mobile = ["dioxus/mobile", "openssl/vendored"]

# Android build targets
[target.aarch64-linux-android.dev-dependencies]
[target.armv7-linux-androideabi.dev-dependencies]
[target.i686-linux-android.dev-dependencies]
[target.x86_64-linux-android.dev-dependencies]
