[package]
name = "nextcloud-auth"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Nextcloud Login Flow v2 authentication library with Dioxus UI components"

[dependencies]
dioxus = { version = "0.7.4" }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt", "time"] }
log = "0.4.28"
