[package]
name = "photo-gallery"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A reusable photo gallery management library with thumbnail generation and storage"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "webp",
] }
tokio = { version = "1.0", features = ["rt", "time", "sync"] }
log = "0.4.28"
dioxus = { version = "0.7.4", optional = true }
base64 = { version = "0.22", optional = true }
reqwest_dav = { version = "0.3", default-features = false, features = [
    "rustls-tls",
], optional = true }
rand = { version = "0.9", optional = true }

# Android picker dependencies
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"
ndk-context = "0.1"

[features]
default = []
sync = ["reqwest_dav", "rand"]
components = ["dioxus", "base64"]
picker = []                       # Feature flag for picker functionality
