[package]
name = "photo-gallery"
version.workspace = true
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A reusable photo gallery management library with thumbnail generation and storage"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
tokio = { version = "1.0", features = ["rt", "time", "sync"] }
log = "0.4.28"
dioxus = { version = "0.7.4", optional = true }
base64 = { version = "0.22", optional = true }
reqwest_dav = { workspace = true }
rand = { version = "0.9", optional = true }

# Android picker dependencies
[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"

[features]
default = []
sync = ["rand"]
components = ["dioxus", "base64"]
picker = []                       # Feature flag for picker functionality
