[package]
name = "stalltagebuch-database"
version = "0.1.0"
edition = "2024"
description = "Database schema and connection management for Stalltagebuch"
license = "MIT"

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
log = "0.4"
thiserror = "2.0"

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[features]
default = []
