[package]
name = "stalltagebuch-server"
version = "0.1.0"
edition = "2021"
description = "SpacetimeDB server module for Stalltagebuch"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { git = "https://github.com/enaut/SpacetimeDB.git", branch = "copilot/create-pr-for-dioxus-changes" }
log = "0.4"

[workspace]
members = []
